# fastapi-serverless-terraform-starter

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  create_layer.sh  pyproject.toml  ruff.toml
fastapi_serverless_terraform_starter/: main.py
fastapi_serverless_terraform_starter/functions/: main_function.py
infra/: .terraform.lock.hcl  api-gateway.tf  lambda-bucket.tf  lambda-layer.tf  lambda-main.tf  output.tf  provider.tf  variables.tf
tests/: conftest.py
