[tool.poetry]
name = "fastapi-serverless-terraform-starter"
version = "0.1.0"
description = ""
authors = ["Massimo Biagioli <biagiolimassimo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
mangum = "^0.17.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"
ruff = "^0.3.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
